--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.12.0",
         "admin-lte": "^3.0.2",
-        "bootstrap-vue": "^2.4.1"
+        "bootstrap-vue": "^2.5.0",
+        "moment": "^2.24.0",
+        "v-calendar": "^1.0.1"
     }
 }
