--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
-        "jquery": "^3.2",
+        "jquery": "^3.4.1",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
@@ -26,6 +26,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.12.0",
         "admin-lte": "^3.0.2",
+        "animate.css": "^3.7.2",
         "bootstrap-vue": "^2.5.0",
         "moment": "^2.24.0",
         "v-calendar": "^1.0.1"
