--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@types/aos": "^3.0.3",
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
@@ -27,6 +28,7 @@
         "@fortawesome/fontawesome-free": "^5.12.0",
         "admin-lte": "^3.0.2",
         "animate.css": "^3.7.2",
+        "aos": "^2.3.4",
         "bootstrap-vue": "^2.5.0",
         "moment": "^2.24.0",
         "v-calendar": "^1.0.1"
