--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "aos": "^2.3.4",
         "bootstrap-vue": "^2.5.0",
         "moment": "^2.24.0",
+        "slick-carousel": "^1.8.1",
         "v-calendar": "^1.0.1"
     }
 }
