--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^1.2",
-        "tcg/voyager": "^1.3"
+        "tcg/voyager": "1.4.*"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
